--- a/src/components/garage-filter/garage-filter.html
+++ b/src/components/garage-filter/garage-filter.html
@@ -1,4 +1,6 @@
 <div class="garage-filter-wrapper container-fluid mb-5 p-4 pb-5">
+  fullPostData {{fullPostData}}<br>
+  garageList {{garageList}}
   <div class="container p-0 pb-4">
     <div class="row">
       <div class="col-12 mb-3 heading">
@@ -8,23 +10,30 @@
       <div class="col-12 col-lg-4 filter-column">
         <label>Location</label>
         <!-- prettier-ignore -->
-        <Select :options="[]" default="Select Location" @selectValue="getSelectInput" />
+        <Select :options="locationList" default="Select Location" @selectValue="updateGarageFilterDetails('location', $event)" />
       </div>
       <div class="col-12 col-lg-4 filter-column">
         <label>Rating</label>
         <!-- prettier-ignore -->
-        <Select :options="[]" default="Select Rating" @selectValue="getSelectInput" />
+        <Select :options="[1,2,3,4,5]" default="Select Rating" @selectValue="updateGarageFilterDetails('rating', $event)" />
       </div>
-      <div class="col-12 col-lg-4 filter-column">
+      <!-- <div class="col-12 col-lg-4 filter-column">
         <label>Deals</label>
         <Radio :selected="false" value="With Deals" name="deals" />
         <Radio :selected="true" value="Without Deals" name="deals" />
+      </div> -->
+      <div class="col-12 col-lg-4 filter-column">
+        <Radio :value="'With Deals'" name="deals" class="mr-4"
+          :selected="filterData.deals === true" @change="e => updateGarageFilterDetails('deals',true)" />
+        
+        <Radio :value="'Without Deals'" name="deals"
+          :selected="filterData.deals === false" @change="e => updateGarageFilterDetails('deals',false)" />
       </div>
       <div class="col-12 col-lg-12 filter-column">
         <label>Services Offered</label>
         <div class="service-choices">
           <span v-for="service in garageServiceList" class="service-list">
-            <Checkbox :value="false" :label="service.title" />
+            <Checkbox :value="false" :label="service.title" @change="updateGarageServiceList(service.id)" />
           </span>
         </div>
       </div>
