--- a/src/components/common/input-file/input-file.scss
+++ b/src/components/common/input-file/input-file.scss
@@ -8,6 +8,19 @@
     border-radius: 5px;
     box-shadow: $shadow-small;
     font-weight: 700;
+    position: relative;
+    //height: 120px;
+    // &:before {
+    //   font-family: "Font Awesome 5 Free";
+    //   font-weight: 900;
+    //   content: "\f302";
+    //   background-color: red;
+    //   position: absolute;
+    //   left: 0;
+    //   top: 0;
+    //   width: 100%;
+    //   height: 100%;
+    // }
     &:focus {
       box-shadow: $shadow-purple;
     }
