--- a/src/components/common/accessories-list/accessories-list.html
+++ b/src/components/common/accessories-list/accessories-list.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 mt-4 mb-1">
       <h5 class="heading">
-        Select Accessories 
+        Select Accessories
         <span>{{getSelectedAccessoriesType}}</span>
       </h5>
     </div>
@@ -10,7 +10,7 @@
       <InputText
         :id="filterInputId"
         class="inputText"
-        :placeholder="'Search Accessories Type'"
+        :placeholder="'Search Accessories ' + getSelectedAccessoriesType"
         :value="value"
         @value="filterAccessoriesData($event)"
       />
@@ -18,11 +18,51 @@
         {{getAccessoriesTypeCount}} Types Found
       </div>
     </div>
-    <template>
-      <div class="col-xs-12 col-lg-2 my-3 accessories-list-cont" v-for="item in getCategories">
-        <div @click="getCategoryOptions(item.title)" class="accessories-list">
+    <template
+      v-if="!getSelectedAccessoryType && !getSelectedAccessoryCategory && !getSelectedAccessorySubCategory && !getSelectedAccessoryItem"
+    >
+      <div
+        class="col-xs-12 col-lg-2 my-3 accessories-list-cont"
+        v-for="item in getAccessoryTypes"
+      >
+        <div
+          @click="showAccessoryCategories(item.title)"
+          class="accessories-list"
+        >
           {{item.title}}
         </div>
+      </div>
+    </template>
+    <template
+      v-if="!getSelectedAccessoryCategory && !getSelectedAccessorySubCategory && !getSelectedAccessoryItem"
+    >
+      <div
+        class="col-xs-12 col-lg-2 my-3 accessories-list-cont"
+        v-for="item in getAccessoryCategories"
+      >
+        <div @click="showAccessorySubCategories(item)" class="accessories-list">
+          {{item}}
+        </div>
+      </div>
+    </template>
+    <template
+      v-if="!getSelectedAccessorySubCategory && !getSelectedAccessoryItem"
+    >
+      <div
+        class="col-xs-12 col-lg-2 my-3 accessories-list-cont"
+        v-for="item in getAccessorySubCategories"
+      >
+        <div @click="showAccessoryItems(item)" class="accessories-list">
+          {{item}}
+        </div>
+      </div>
+    </template>
+    <template v-if="!getSelectedAccessoryItem">
+      <div
+        class="col-xs-12 col-lg-2 my-3 accessories-list-cont"
+        v-for="item in getAccessoryItems"
+      >
+        <div @click="showPosts(item)" class="accessories-list">{{item}}</div>
       </div>
     </template>
   </div>
