--- a/src/components/post-detail-table/post-detail-table.html
+++ b/src/components/post-detail-table/post-detail-table.html
@@ -304,4 +304,65 @@
       <p>{{data.digits}}</p>
     </li>
   </ul>
+  <ul
+    v-else-if='selectedClassifiedCategory==="accessories-and-parts"'
+    class="overview-table mt-3 mb-4"
+  >
+    <li>
+      <p>Type</p>
+      <p>{{data.type}}</p>
+    </li>
+    <li>
+      <p>Category</p>
+      <p>{{data.category}}</p>
+    </li>
+    <li>
+      <p>Sub Category</p>
+      <p>{{data.subCategory}}</p>
+    </li>
+    <li>
+      <p>Item</p>
+      <p>{{data.item}}</p>
+    </li>
+    <li>
+      <p>Name</p>
+      <p>{{data.name}}</p>
+    </li>
+    <li>
+      <p>Phone</p>
+      <p>{{data.phone}}</p>
+    </li>
+    <li>
+      <p>Email</p>
+      <p>{{data.email}}</p>
+    </li>
+    <li>
+      <p>Place</p>
+      <p>{{data.place}}</p>
+    </li>
+    <li>
+      <p>Price</p>
+      <p>{{data.price}}</p>
+    </li>
+    <li>
+      <p>Seller Type</p>
+      <p>{{data.sellerType}}</p>
+    </li>
+    <li>
+      <p>Accessories Condition</p>
+      <p>{{data.accessoriesCondition}}</p>
+    </li>
+    <li>
+      <p>Accessories Usage</p>
+      <p>{{data.accessoriesUsage}}</p>
+    </li>
+    <li>
+      <p>Warranty</p>
+      <p>{{data.warranty}}</p>
+    </li>
+    <li>
+      <p>City</p>
+      <p>{{data.city}}</p>
+    </li>
+  </ul>
 </div>
