Reset password and accessories updates

--- a/src/components/common/accessories-list/accessories-list.html
+++ b/src/components/common/accessories-list/accessories-list.html
@@ -15,7 +15,7 @@
         @value="filterAccessoriesData($event)"
       />
       <div class="d-flex justify-content-center mt-2 text-uppercase">
-        {{getAccessoriesTypeCount}} Types Found
+        {{getAccessoriesCount}} {{getSelectedAccessoriesType}} Found
       </div>
     </div>
     <template
