--- a/src/components/forgot-password-form/forgot-password-form.html
+++ b/src/components/forgot-password-form/forgot-password-form.html
@@ -4,7 +4,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 mb-3">
-            <h5 class="mb-4">Login</h5>
+            <h5 class="mb-4">Forgot Password</h5>
           </div>
           <div class="col-12 mb-3 d-flex">
             <Radio
@@ -22,32 +22,20 @@
             />
           </div>
           <div class="col-12 mb-3">
-            <label>Username</label>
+            <label>Enter your Username or Email</label>
             <!-- prettier-ignore -->
-            <InputText class="inputText" placeholder="Enter Username" id="username" :value="username"
-              @value="updateUsername($event)" />
+            <InputText class="inputText" placeholder="Enter Username" id="username" :value="username" :error="forgotPasswordValidation.username" errorText="Enter valid Username/Email Address" @value="updateUsername($event)" />
           </div>
-          <div class="col-12 mb-4">
-            <label>Password</label>
-            <!-- prettier-ignore -->
-            <InputText class="inputText" placeholder="Enter Password" id="password" type="password" :value="password"
-              @value="updatePassword($event)" />
-          </div>
+
           <div
-            class="col-12 mt-2 d-flex justify-content-between align-items-center button-wrapper"
+            class="col-12 mt-2 d-flex justify-content-end align-items-center button-wrapper"
           >
-            <span class="d-inline-flex" @click="newUserRegister"
-              >New User? Create Account!</span
-            >
             <div class="d-inline-flex">
               <!-- prettier-ignore -->
-              <Button type="hollow" text="Cancel" class="mr-3" @click="cancelLogin()" />
+              <Button type="hollow" text="Cancel" class="mr-3" @click="cancelReset()" />
               <!-- prettier-ignore -->
-              <Button type="primary" text="Login" @click="submitLogin()" />
+              <Button type="primary" text="Submit" @click="forgotPassword()" />
             </div>
-          </div>
-          <div class="col-12 mt-3 button-wrapper">
-            <span @click="forgotPassword">Forgot Password?</span>
           </div>
         </div>
       </div>
