--- a/src/views/post-details/post-details.html
+++ b/src/views/post-details/post-details.html
@@ -112,7 +112,7 @@
               text="Whatsapp"
               class="flex-fill ml-1"
               :icon="['fab', 'whatsapp']"
-              @click="openWhatsapp(postData.phone)"
+              @click="openWhatsapp(postData.whatsappNumber)"
               width= "100%"
             />
             <!-- prettier-ignore -->
