--- a/src/components/classifieds-form/used-cars/used-cars.html
+++ b/src/components/classifieds-form/used-cars/used-cars.html
@@ -44,7 +44,7 @@
   </div>
   <div class="col-12 mb-3">
     <label>
-      Place
+      Location
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
@@ -62,12 +62,12 @@
   </div>
   <div class="col-12 mb-3">
     <label>
-      Distance
+      Mileage
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.distance" errorText="Enter Distance"
-    placeholder="Enter Distance" id="distance" :value="newPost.distance" @value="updatePostData('distance', $event)" type="number" />
+    <InputText class="inputText" :error="newPostValidation.distance" errorText="Enter Mileage"
+    placeholder="Enter Mileage" id="distance" :value="newPost.distance" @value="updatePostData('distance', $event)" type="number" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -75,14 +75,14 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number"
-    placeholder="Enter Phone Number" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
+    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number with Country Code"
+    placeholder="Enter Phone Number with Country Code" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>Whatsapp Number <span>*</span></label>
     <!-- prettier-ignore -->
     <InputText class="inputText" :error="newPostValidation.whatsappNumber"
-      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number"
+      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number with Country Code"
       id="whatsappNumber" :value="newPost.whatsappNumber"
       @value="updatePostData('whatsappNumber', $event)" />
   </div>
@@ -176,7 +176,7 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.sellerTypes()" :error="newPostValidation.sellerType" errorText="Select Seller Type"
+    <Select :options="utils.sellerTypes(loginInfo.userType)" :error="newPostValidation.sellerType" errorText="Select Seller Type"
     default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" />
   </div>
   <div class="col-12 mb-3">
@@ -245,6 +245,15 @@
     <Select :options="utils.steeringSideOptions()" :error="newPostValidation.steeringSide"
     errorText="Select Steering Side" default="Select Steering Side"
     @selectValue="updatePostData('steeringSide', $event)" />
+  </div>
+  <div class="col-12 mb-3">
+    <label>
+      Video Link
+      <span>*</span>
+    </label>
+    <!-- prettier-ignore -->
+    <InputText class="inputText" :error="newPostValidation.video" errorText="Enter valid youtube video link"
+    placeholder="Enter youtube video link" id="video" :value="newPost.video" @value="updatePostData('video', $event)" />
   </div>
   <div
     class="col-12 mt-3 mb-5 d-flex justify-content-between align-items-center button-wrapper"
