--- a/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
+++ b/src/components/classifieds-form/accessories-and-parts/accessories-and-parts.html
@@ -50,7 +50,7 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.sellerTypes()" :error="newPostValidation.sellerType" errorText="Select Seller Type"
+    <Select :options="utils.sellerTypes(loginInfo.userType)" :error="newPostValidation.sellerType" errorText="Select Seller Type"
       default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" />
   </div>
   <div class="col-12 mb-3">
@@ -82,7 +82,7 @@
   </div>
   <div class="col-12 mb-3">
     <label>
-      Place
+      Location
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
@@ -105,14 +105,14 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone" placeholder="Enter Phone"
+    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number with Country Code" placeholder="Enter Phone Number with Country Code"
       id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>Whatsapp Number <span>*</span></label>
     <!-- prettier-ignore -->
     <InputText class="inputText" :error="newPostValidation.whatsappNumber"
-      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number"
+      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number with Country Code"
       id="whatsappNumber" :value="newPost.whatsappNumber"
       @value="updatePostData('whatsappNumber', $event)" />
   </div>
