--- a/src/components/classifieds-form/number-plates/number-plates.html
+++ b/src/components/classifieds-form/number-plates/number-plates.html
@@ -14,14 +14,14 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number"
+    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number with Country Code"
     placeholder="Enter Phone Number" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>Whatsapp Number <span>*</span></label>
     <!-- prettier-ignore -->
     <InputText class="inputText" :error="newPostValidation.whatsappNumber"
-      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number"
+      errorText="Enter valid Whatsapp Number with country code" placeholder="Enter Whatsapp Number with Country Code"
       id="whatsappNumber" :value="newPost.whatsappNumber"
       @value="updatePostData('whatsappNumber', $event)" />
   </div>
