--- a/src/components/lease-category-select/lease-category-select.html
+++ b/src/components/lease-category-select/lease-category-select.html
@@ -1,9 +1,9 @@
 <div class="classifieds-category-select-wrapper container mb-5">
   <div class="row">
-    <div class="col-12 mt-4 mb-2">
+    <div class="col-12 mt-4 mb-2 main-cont">
       <h5 class="heading">Select Your <span>Lease Car</span></h5>
-       <!-- prettier-ignore -->
-      <Button type="primary" class="float-right" text="Post a new Lease" @click="newPost()" />
+      <!-- prettier-ignore -->
+      <Button type="primary" class="new-post-btn" text="Post a new Lease" @click="newPost()" v-if="showNewPost" />
     </div>
     <template>
       <div
