--- a/src/components/spare-parts-form/heavy/heavy.html
+++ b/src/components/spare-parts-form/heavy/heavy.html
@@ -95,8 +95,8 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number"
-    placeholder="Enter Phone Number" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
+    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number with Country Code"
+    placeholder="Enter Phone Number with Country Code" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>
