--- a/src/components/spare-parts-form/truck/truck.html
+++ b/src/components/spare-parts-form/truck/truck.html
@@ -14,8 +14,8 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number"
-    placeholder="Enter Phone Number" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
+    <InputText class="inputText" :error="newPostValidation.phone" errorText="Enter Phone Number with Country Code"
+    placeholder="Enter Phone Number with Country Code" id="phone" :value="newPost.phone" @value="updatePostData('phone', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -67,7 +67,7 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.sellerTypes()" :error="newPostValidation.sellerType " errorText="Select Seller Type"
+    <Select :options="utils.sellerTypes(loginInfo.userType)" :error="newPostValidation.sellerType " errorText="Select Seller Type"
     default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" />
   </div>
   <div class="col-12 mb-3">
