--- a/src/components/forgot-password-form/forgot-password-form.html
+++ b/src/components/forgot-password-form/forgot-password-form.html
@@ -24,7 +24,7 @@
           <div class="col-12 mb-3">
             <label>Enter your Username or Email</label>
             <!-- prettier-ignore -->
-            <InputText class="inputText" placeholder="Enter Username" id="username" :value="username" :error="forgotPasswordValidation.username" errorText="Enter valid Username/Email Address" @value="updateUsername($event)" />
+            <InputText class="inputText" placeholder="Enter Username/Email Address" id="username" :value="username" :error="forgotPasswordValidation.username" errorText="Enter valid Username/Email Address" @value="updateUsername($event)" />
           </div>
 
           <div
