--- a/src/components/reset-password-form/reset-password-form.html
+++ b/src/components/reset-password-form/reset-password-form.html
@@ -9,12 +9,12 @@
           <div class="col-12 mb-3">
             <label>New Password</label>
             <!-- prettier-ignore -->
-            <InputText class="inputText" placeholder="Enter new password" id="newPassword" :value="resetValues.newPassword" :error="resetPasswordValidation.newPassword" errorText="Enter valid Username/Email Address" @value="updatePassword('newPassword',$event)" />
+            <InputText class="inputText" placeholder="Enter new password" id="newPassword" :value="resetValues.newPassword" :error="resetPasswordValidation.newPassword" errorText="Enter new password" @value="updatePassword('newPassword',$event)" />
           </div>
           <div class="col-12 mb-3">
             <label>Confirm New Password</label>
             <!-- prettier-ignore -->
-            <InputText class="inputText" placeholder="Enter new password again to confirm" id="confirmNewPassword" :value="resetValues.confirmNewPassword" :error="resetPasswordValidation.confirmNewPassword" errorText="Enter valid Username/Email Address" @value="updatePassword('confirmNewPassword',$event)" />
+            <InputText class="inputText" placeholder="Enter new password again to confirm" id="confirmNewPassword" :value="resetValues.confirmNewPassword" :error="resetPasswordValidation.confirmNewPassword" errorText="Enter same password again to confirm" @value="updatePassword('confirmNewPassword',$event)" />
           </div>
 
           <div
