--- a/src/components/common/button/button.scss
+++ b/src/components/common/button/button.scss
@@ -45,6 +45,10 @@
       color: $white;
     }
   }
+  &.small {
+    padding: 5px 15px;
+    font-size: 12px;
+  }
   svg {
     font-size: 1.5rem;
     transition: 0.3s ease;
