--- a/src/components/garage-filter/garage-filter.html
+++ b/src/components/garage-filter/garage-filter.html
@@ -1,6 +1,4 @@
 <div class="garage-filter-wrapper container-fluid mb-5 p-4 pb-5">
-  fullPostData {{fullPostData}}<br>
-  garageList {{garageList}}
   <div class="container p-0 pb-4">
     <div class="row">
       <div class="col-12 mb-3 heading">
@@ -23,17 +21,30 @@
         <Radio :selected="true" value="Without Deals" name="deals" />
       </div> -->
       <div class="col-12 col-lg-4 filter-column">
-        <Radio :value="'With Deals'" name="deals" class="mr-4"
-          :selected="filterData.deals === true" @change="e => updateGarageFilterDetails('deals',true)" />
-        
-        <Radio :value="'Without Deals'" name="deals"
-          :selected="filterData.deals === false" @change="e => updateGarageFilterDetails('deals',false)" />
+        <Radio
+          :value="'With Deals'"
+          name="deals"
+          class="mr-4"
+          :selected="filterData.deals === true"
+          @change="e => updateGarageFilterDetails('deals',true)"
+        />
+
+        <Radio
+          :value="'Without Deals'"
+          name="deals"
+          :selected="filterData.deals === false"
+          @change="e => updateGarageFilterDetails('deals',false)"
+        />
       </div>
       <div class="col-12 col-lg-12 filter-column">
         <label>Services Offered</label>
         <div class="service-choices">
           <span v-for="service in garageServiceList" class="service-list">
-            <Checkbox :value="false" :label="service.title" @change="updateGarageServiceList(service.id)" />
+            <Checkbox
+              :value="false"
+              :label="service.title"
+              @change="updateGarageServiceList(service.id)"
+            />
           </span>
         </div>
       </div>
